--- a/package.json
+++ b/package.json
@@ -3,44 +3,71 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/outfit": "^0.4.3",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/react-native-skia": "2.2.12",
+    "apisauce": "^3.2.2",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.0",
+    "expo-blur": "^15.0.8",
+    "expo-brightness": "~14.0.8",
     "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.8",
+    "expo-location": "~19.0.8",
+    "expo-network": "~8.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.10",
-    "expo-status-bar": "~3.0.8",
+    "expo-splash-screen": "^31.0.13",
+    "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.7",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.7",
+    "jest": "~29.7.0",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "1.18.5",
+    "react-native-mmkv": "^4.1.1",
+    "react-native-nitro-modules": "^0.32.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-volume-manager": "^2.0.8",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-wifi-reborn": "^4.13.6",
+    "react-native-worklets": "^0.5.1",
+    "reactotron-react-native": "^5.1.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
+    "jest-expo": "^54.0.16",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react-test-renderer": "^19.1.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
   },
   "private": true
