--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.4.3",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/flash-list": "^2.2.0",
     "@shopify/react-native-skia": "2.2.12",
     "apisauce": "^3.2.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "date-fns": "^4.1.0",
     "expo": "^54.0.0",
     "expo-blur": "^15.0.8",
     "expo-brightness": "~14.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.10",
+    "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.8",
@@ -44,6 +48,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "^4.1.1",
+    "react-native-mmkv-storage": "^12.0.1",
     "react-native-nitro-modules": "^0.32.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
