--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "^2.2.0",
     "@shopify/react-native-skia": "2.2.12",
+    "@supabase/supabase-js": "^2.90.1",
     "apisauce": "^3.2.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "date-fns": "^4.1.0",
@@ -36,6 +37,7 @@
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "^31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.7",
     "expo-video": "~3.0.15",
@@ -53,6 +55,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-volume-manager": "^2.0.8",
     "react-native-web": "^0.21.0",
     "react-native-wifi-reborn": "^4.13.6",
