--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "2.0.2",
     "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.90.1",
     "apisauce": "^3.2.2",
@@ -66,7 +66,7 @@
     "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.10",
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
